# midas-journal-797

VTKClassesForBooleanOperationsOnSurfaces/: .gitignore
VTKClassesForBooleanOperationsOnSurfaces/Source/: BooleanOperationPolyDataFilterExample.cxx  CMakeLists.txt
VTKClassesForBooleanOperationsOnSurfaces/data/: out.stl  sphere.stl  suzanne.stl
